--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb39014650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98791e7bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb38fb1950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb38fb1b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9878ec4a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9878ec4c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb3958a390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb3958a590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9879469450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9879469650&gt;]</pre>
 </div>
 
 </div>
