--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f17887d0b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f062e337fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1788781a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1788781c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f062e3907d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f062e3909d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1788d3f410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1788d3f610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f062e930250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f062e930450&gt;]</pre>
 </div>
 
 </div>
