--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88ed414250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6651651e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88ed1209d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88ed120bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6651335910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6651335b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f88ed6c1310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f88ed6c1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66518d3450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66518d3650&gt;]</pre>
 </div>
 
 </div>
