--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6651651e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f561a316590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6651335910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6651335b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f561a2f7990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f561a2f7b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66518d3450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66518d3650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f561a898310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f561a898510&gt;]</pre>
 </div>
 
 </div>
