--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4403195bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30144167d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4402e7bad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4402e7bcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f301411db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f301411dd90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44034204d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44034206d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30146c4490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30146c46d0&gt;]</pre>
 </div>
 
 </div>
