--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ce6234050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa082cdef50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ce5f1bb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ce5f1bd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0829ec950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0829ecb50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ce64c2510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ce64c2710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa082f8c290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa082f8c490&gt;]</pre>
 </div>
 
 </div>
