--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f491074a8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe90e20fad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4910a57510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4910717a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe90e1e1990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe90e1e1b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4910d09210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4910cb73d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe90e781310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe90e781510&gt;]</pre>
 </div>
 
 </div>
