--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25e678d450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e61b9fe90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25e675a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25e675abd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e61885a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e61885c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25e6cfa410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25e6cfa610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e61e2b410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e61e2b610&gt;]</pre>
 </div>
 
 </div>
