--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30c8837990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c2bbef1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c851ca50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30c851cc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c2b8c4990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c2b8c4b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30c8ac24d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30c8ac26d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c2be9d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c2be9d550&gt;]</pre>
 </div>
 
 </div>
