--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e564ca850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a907bf6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e561d2a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e561d2c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a907d4810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a904a1a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e567773d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e567775d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a90a86dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a90a40450&gt;]</pre>
 </div>
 
 </div>
