--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe151517d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8986ea110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe151224990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe151224b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8983c0e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8983f7b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1517c3390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1517c3590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff898997310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff89897b810&gt;]</pre>
 </div>
 
 </div>
