--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffbb37d74d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa551e2e8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbb34e59d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbb34e5bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa551df4a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa551df4c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbb3ad0f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbb3a845d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa55239a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa55239a710&gt;]</pre>
 </div>
 
 </div>
