--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2426d93b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd53ac957d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2427369990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2427369b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd53a99fa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd53a99fc90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2427908310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2427908510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd53af41490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd53af41690&gt;]</pre>
 </div>
 
 </div>
