--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ba94d1910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4932f3a6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ba91afa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ba91afc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4932c1fad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4932c1fcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ba9752410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ba9752610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49331c5510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49331c5710&gt;]</pre>
 </div>
 
 </div>
