--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea5c2c8ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa7e78b090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea5bfcdb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea5bfcdd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7e7f9ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa7e7f9cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea5c5734d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea5c5736d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7e7a8d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa7ed9c650&gt;]</pre>
 </div>
 
 </div>
