--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa7e78b090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7febff18a450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7e7f9ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa7e7f9cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7febff15a9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7febff15abd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7e7a8d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa7ed9c650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7febff748e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7febff6fc590&gt;]</pre>
 </div>
 
 </div>
