--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b7c20ab50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16c1925150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b7bee58d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b7bee5ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f16c15fc950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f16c1628dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b7c48c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b7c48c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f16c1bc52d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f16c1bd1750&gt;]</pre>
 </div>
 
 </div>
