--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f271f5798d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f695afd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f271f2718d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f271f271ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f687c7890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f687c7a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f271f812210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f271f812410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f68d66310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f68d66510&gt;]</pre>
 </div>
 
 </div>
