--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc20a8eaf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72bad6e450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc20a8b5b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc20a8b5d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72baa7b950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72baa7bb50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc20ae5b550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc20ae5b750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72bb019410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72bb019610&gt;]</pre>
 </div>
 
 </div>
