--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3407b499d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f611e6ea590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34077f18d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34077f1b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f611e39c890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f611e39ca90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3407dcb250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3407dcb490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f611e977290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f611e977490&gt;]</pre>
 </div>
 
 </div>
