--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cc5892d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff913c872d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cc58e3c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cc58e3e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff913c579d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff913c57bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cc5e8b550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cc5e8b750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9141fd350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9141fd550&gt;]</pre>
 </div>
 
 </div>
