--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5b555e550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc78b4f6110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5b552db10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5b552dd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc78a566990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc78a566b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5b5ad4510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5b5ad4710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc78ab06350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc78ab06550&gt;]</pre>
 </div>
 
 </div>
